--- a/L6/index copy.html
+++ b/L6/index copy.html
@@ -40,22 +40,22 @@
   </style>
 </head <body>
 <div id="app">
-  <ul style="margin-left: 40px;margin-top: 40px;">
+  <transition name="flip-list">
+    <p v-if="show">
+      {{obj}}
 
+    </p>
+  </transition>
+  <button @click="show=!show">show</button>
+  <ul>
     <transition-group name="flip-list" tag="ul">
-      <!--
-                有多个元素时使用 transition-group
-                但个元素使用transition
-                
-                将需要实现的效果添加name作为前缀的css -->
-
       <li v-for="(item,i) in list" :key="item.id">
         {{item.name}}
         <button @click="moveUp(i)" :disabled="i===0">上移</button>
         <button @click="moveDown(i)" :disabled="i===list.length-1">下移</button>
         <button v-if="list.length>2" @click="list.splice(i,1)">删除</button>
       </li>
-      </transitiongr-group>
+    </transition-group>
 
   </ul>
 </div>
@@ -67,12 +67,16 @@
     el: "#app",
     data() {
       return {
+        obj: {
+          name: "Azrael",
+        },
+        show: true,
         list: [{
             id: 1,
             name: "user-1"
           },
           {
-            ise3zd33333333333333333333333333333333333DAd: 2,
+            id: 2,
             name: "user-2"
           },
           {
@@ -89,42 +93,30 @@
     },
     methods: {
       moveUp(i) {
-        /* 
         let prev = this.list[i - 1];
-        this.list[i - 1] = this.list[i];
-        this.list[i] = prev; 
-        此方法没有被监听             访问下面名的网站      
-        https://cn.vuejs.org/v2/guide/reactivity.html#%E6%A3%80%E6%B5%8B%E5%8F%98%E5%8C%96%E7%9A%84%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9
-        */
-        // let prev = this.list[i - 1]
+        // this.list[i - 1] = this.list[i];
+        // this.list[i] = prev;
+
         // this.$set(this.list, i - 1, this.list[i])
         // this.$set(this.list, i, prev)
-        this.list.splice(i, 0, this.list.splice(i - 1, 1)[0])
 
-        // splice(a, b, c)   a表示从那里开始   不表示删除几个    c表示把什么插入在a的位置
-
-
+        this.list.splice(i, 0, this.list.splice(i - 1, 1)[0]);
       },
       moveDown(i) {
-        /*                
-         let next = this.list[i + 1];
-        this.list[i + 1] = this.list[i];
-        this.list[i] = next; 
-        */
-        // let next = this.list[i + 1]
+        let next = this.list[i + 1];
+        // this.list[i + 1] = this.list[i];
+        // this.list[i] = next;
+
         // this.$set(this.list, i + 1, this.list[i])
         // this.$set(this.list, i, next)
-        this.list.splice(i, 0, this.list.splice(i + 1, 1)[0])
+
+        this.list.splice(i, 0, this.list.splice(i + 1, 1)[0]);
 
       }
     }
 
   })
-  let arr = [1, 2, 4];
-  arr.splice(2, 0, 3)
-  console.log(arr);
 </script>
-
 </body>
 
 </html>
