--- a/L9/index.html
+++ b/L9/index.html
@@ -23,7 +23,7 @@
   <div id="app" v-cloak>
 
   </div>
-  <script src="vue.js"></script>
+  <script src="../vue.js"></script>
   <script>
     Vue.config.devtools = false;
     Vue.config.productionTip = false;
