--- a/L10/demo.html
+++ b/L10/demo.html
@@ -99,7 +99,7 @@
         // console.log(this.$children);
       },
       mounted() {
-        console.log(this.$children);
+        // console.log(this.$children);
 
         this.$children[this.active].show = true;
       },
