--- a/L10/index copy.html
+++ b/L10/index copy.html
@@ -23,6 +23,8 @@
   <div id="app" v-cloak>
     <aaa ref="a1"></aaa>
     <aaa ref="a2"></aaa>
+    <bbb ref="b1"></bbb>
+    <bbb ref="b2"></bbb>
   </div>
   <script src="../vue.js"></script>
   <script>
@@ -32,6 +34,7 @@
       template: `
       <h1>AAAA
         <bbb></bbb>
+
         </h1>
       
       `,
@@ -58,7 +61,7 @@
       },
       created() {
         console.log("bbbname", this.$parent.name); //aaa
-        console.log("bbbname", this.$parent.$parent.name); //app
+        // console.log("bbbname", this.$parent.$parent.name); //app
         console.log("bbbname", this.$root.name); //app
       },
       mounted() {
