--- a/L25/index.html
+++ b/L25/index.html
@@ -27,7 +27,7 @@
   <script>
     Vue.config.devtools = false;
     Vue.config.productionTip = false;
-    // config配置及第三方库
+    // 使用自己的plugin
     new Vue({
       el: "#app",
       data() {
