--- a/L26/index.html
+++ b/L26/index.html
@@ -27,7 +27,7 @@
   <script>
     Vue.config.devtools = false;
     Vue.config.productionTip = false;
-    // config配置及第三方库
+    // 自动化插件及组件
     new Vue({
       el: "#app",
       data() {
