--- a/rollup/index.html
+++ b/rollup/index.html
@@ -27,8 +27,10 @@
   <script>
     // 前端工程化
 
-    azrael.fmtDate();
-    azrael.throttle();
+    // azrael.fmtDate();
+    // azrael.throttle();
+
+    console.log(azrael.kebab("loginUser"));
   </script>
 </body>
 
